fixes to footer title alignment

--- a/css/index.css
+++ b/css/index.css
@@ -93,13 +93,16 @@ nav li:nth-child(1) { font-weight: 600; }
 
 				/* -- Main-page Introduction and Links -- */
 
+.section-rightpanel {
+	max-width: 100%;
+}
+
 @media screen and (max-width: 910px) {
 	#index-content { padding-top: 0px; }
 	h2 { text-align: center; }
 }
 
 #index-introduction {
-	max-width: 100%;
 	/*Flex-cont: defaults */
 	display: flex;
     display: -webkit-box;
